assets/css/theme.scss
/* ... */
.sidebar h5:before {
    margin-bottom: 0;
    position: absolute;
    z-index: 1;
    left: 0px;
    top: 15px;
    width: 100%;
    height: 1px;
    content: '';
    background-color: #333333;
}
.sidebar ul {list-style:none;padding-left:0;}
.sidebar ul li a {
    color: #999;
    border-bottom: 1px solid #f6f6f6;
    display: block;
    padding-bottom: 7px;
    padding-top: 7px;
}
.sidebar-section {     
    margin-bottom: 2rem;
    box-shadow:0 0px 1px 0 rgba(0, 0, 0, 0.44);
    padding: 30px;
}
.sidebar #mc_embed_signup form {
    padding: 0 !important;
}
.sidebar #mc_embed_signup .button {
    width: 100% !important;
    background: #3d61fd !important;
    height: auto;
    padding: 6px 20px;
    font-weight: 600;
}
.sidebar #mc_embed_signup h2 {
    font-weight: 400;
    font-size: 15px;
    color: #999;
    margin-bottom: 1rem; 
    line-height: 1.5;
    text-align: center;
}
.sidebar #mc_embed_signup input {width:100%;}
.sidebar #mc_embed_signup .mc-field-group {width:100% !important;}
#mc_embed_signup .mc-field-group input {text-indent: 5% !important;}
#mc_embed_signup {font-family:inherit !important;}
.sidebar-right .sidebar {max-width:inherit;}

.article-post .h1, .article-post .h2, .article-post .h3, .article-post .h4, .article-post .h5, .article-post .h6, .article-post h1, .article-post h2, .article-post h3, .article-post h4, .article-post h5, .article-post h6 {
    font-weight: 600;
    font-family: PT Sans;
    margin-top: 3rem;
}

img {max-width:100%;height: auto;}

.bottompagination span.navigation a {
	background: #fdd93d;
    color: #333;
    padding: 5px;
    border-radius: 3px;
    text-transform: none;
    font-weight: 600;
    letter-spacing: 0;
    min-width: 100px;
    display: inline-block;
}
.pointerup {
	margin-bottom:-18px;
	margin-left:49%;
	font-size:30px;
}
.pointerup i.fa {
	color:#eaeaea;
}
.bottompagination span.navigation i {
	display:inline-block;
}
span.navigation {
    display: block;
    font-size: 0.93rem;
    font-weight: 700;
    text-align:center;
    position:relative;
}
span.navigation:before {
    margin-bottom: 0;
    position: absolute;
    z-index: 1;
    left: 0px;
    right: 0px;
    top: 12px;
    height: 1px;
    content: '';
}
.pagination {
    display: inline-block;
    background: #fff;
    z-index: 1;
    position: relative;
    padding: 0 20px;
    font-size: 13px;
    letter-spacing: 0.5px;
    font-weight: 500;
    text-transform: uppercase;
}

.footer {
    margin-top:4rem;
    padding:30px 0;
    ul li {
        display: inline-block;
        padding:10px;
    }
}

.hover-opacity:hover {
    transition: all 0.3s;
    opacity:.8;
}

.web-build-left {
    min-width: 100%;
}
.web-build-list {
    list-style: none;
    position: relative;
    padding: 0;
    margin-top: 2.0rem;

    li {
        text-align: center;
        margin-bottom: 2.0rem;
        position: relative;
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-left: 0rem;

        &:last-child {
            margin-bottom: 0;
        }

        &::before {
            display: flex;
            justify-content: center;
            align-items: center;
            content: attr(data-num);
            width: 40px;
            height: 40px;
            background-color: #333741;
            color: white;
            position: relative;
            margin: 0 auto 1.0rem;
            font-size: 1.8rem;
            font-weight: 400;
            border-radius: 9999px;
        }
    }
}

@include media-breakpoint-up(xsm) {
    .web-build-list {
        margin-left: 1.0rem;

        li {
            text-align: left;
            margin-left: 3.0rem;

            &::before {
                position: absolute;
                left: calc(-3.0rem - 15px);
                top: calc(50% - 20px);
            }
        }

        &::before {
            display: block;
            content: '';
            width: 0.6rem;
            height: 100%;
            background-color: #333741;
            position: absolute;
            top: 0;
            left: 0;
            border-radius: 9999px;
        }
    }
}

@include media-breakpoint-up(lg) {
    .web-build-left {
        min-width: 25.0rem;
    }
    .web-build-list {
        margin-top: 0;
    }
}

.faq {
    h2, h3, h4, h5, h6, p {
        margin-bottom: $spacer;
    }
    h2, h3, h4, h5, h6 {
        margin-top: $spacer * 3;
    }
}

.list-col-3 {
    column-count: 1;
}

@include media-breakpoint-up(md) {
    .list-col-3 {
        column-count: 2;
    }
}

@include media-breakpoint-up(lg) {
    .list-col-3 {
        column-count: 3;
    }
}

